--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="A BrAPI-powered bulk germplasm search tool">
     <meta name="author" content="">
 
     <title>Germplasm Search Tool</title>
@@ -98,6 +98,7 @@
           </strong>
         </p>
 
+        <!-- Cache Available -->
         <div id="cache-available-info" class="alert alert-success" role="alert">
           <p class="mb-0">
             <strong>
@@ -124,6 +125,7 @@
           </p>
         </div>
 
+        <!-- Cache Unavailable -->
         <div id="cache-unavailable-info" class="alert alert-warning" role="alert">
           <p class="mb-0">
             <strong>
