Reorganize search options in search function

--- a/static/index.html
+++ b/static/index.html
@@ -353,8 +353,8 @@
         <p><strong>ERROR!</strong></p>
         <p id="error-text"></p>
         <p class="text-secondary">
-          An error occurred and the search could not be performed.  Check the search settings (such 
-          as the database settings and the input of germplasm names) and try again.
+          An error occurred and the search could not be performed.  Check the search 
+          settings and try again.
         </p>
         <br />
         <button id="error-return" type="button" class="btn btn-primary btn-block">
