Reorganize match display

--- a/static/index.html
+++ b/static/index.html
@@ -212,16 +212,6 @@
           </div>
 
           <div class="custom-control custom-switch">
-            <input id="include-substring" class="custom-control-input" type="checkbox">
-            <label class="custom-control-label" for="include-substring">
-              Substring Match
-              <svg class="bi bi-info-circle-fill search-option-info" width="1em" height="1em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" data-toggle="tooltip" data-title="Find germplasm records where your search term is contained within a database term">
-                <path fill-rule="evenodd" d="M8 16A8 8 0 108 0a8 8 0 000 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
-              </svg>
-            </label>
-          </div>
-
-          <div class="custom-control custom-switch">
             <input id="include-punctuation" class="custom-control-input" type="checkbox">
             <label class="custom-control-label" for="include-punctuation">
               Remove Punctuation
@@ -231,6 +221,16 @@
             </label>
           </div>
           
+          <div class="custom-control custom-switch">
+            <input id="include-substring" class="custom-control-input" type="checkbox">
+            <label class="custom-control-label" for="include-substring">
+              Substring Match
+              <svg class="bi bi-info-circle-fill search-option-info" width="1em" height="1em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" data-toggle="tooltip" data-title="Find germplasm records where your search term is contained within a database term">
+                <path fill-rule="evenodd" d="M8 16A8 8 0 108 0a8 8 0 000 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
+              </svg>
+            </label>
+          </div>
+
           <div class="custom-control custom-switch">
             <input id="include-edit-distance" class="custom-control-input" type="checkbox">
             <label class="custom-control-label" for="include-edit-distance">
@@ -294,8 +294,8 @@
         <table id="matches-table" class="table table-striped table-bordered">
           <thead class="thead-light">
             <tr>
-              <th width="225px">Input Germplasm Name</th>
-              <th width="180px">Match Type</th>
+              <th width="225px">Search Term</th>
+              <th width="180px">Match Type(s)</th>
               <th>Database Matches</th>
             </tr>
           </thead>
@@ -388,8 +388,6 @@
             </button>
           </div>
           <div class="modal-body">
-            The details of the germplasm stored in the database are:
-            <br /><br />
             <div id="germplasmModal-details"></div>
           </div>
           <div class="modal-footer">
