API: /cache get status of all caches

--- a/static/index.html
+++ b/static/index.html
@@ -431,7 +431,7 @@
         setDatabases(
           q('db'), 
 
-          // Set intiail database properties
+          // Set initial database properties
           function() {
             setDatabaseProperties(
               {
@@ -441,7 +441,7 @@
                 call_limit: q('db_call_limit')
               },
 
-              // Set intial options
+              // Set initial options
               function() {
                 setOptions(
                   {
