--- a/static/index.html
+++ b/static/index.html
@@ -317,7 +317,7 @@
         <!-- Download buttons -->
         <div class="d-flex flex-row">
           <div class="p-2 flex-fill">
-            <button id="download-matches" type="button" class="btn btn-success btn-block" data-toggle="tooltip" data-title="Download a table containing the germplasm names and selected database matches for entries with a match">
+            <button id="download-matches" type="button" class="btn btn-success btn-block" data-toggle="tooltip" data-title="Download a table containing the search terms and database germplasm names for entries with a selected match">
               <svg class="bi bi-check-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"/>
                   <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1013.5 8a.5.5 0 011 0 6.5 6.5 0 11-3.25-5.63.5.5 0 11-.5.865A5.472 5.472 0 008 2.5z" clip-rule="evenodd"/>
@@ -326,7 +326,7 @@
             </button>
           </div>
           <div class="p-2 flex-fill">
-            <button id="download-no-matches" type="button" class="btn btn-danger btn-block" data-toggle="tooltip" data-title="Download a table containing the germplasm names of entries that do not have a database match">
+            <button id="download-no-matches" type="button" class="btn btn-danger btn-block" data-toggle="tooltip" data-title="Download a table containing the search terms that do not have a database match">
               <svg class="bi bi-x-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z" clip-rule="evenodd"/>
@@ -336,7 +336,7 @@
             </button>
           </div>
           <div class="p-2 flex-fill">
-            <button id="download-all" type="button" class="btn btn-primary btn-block" data-toggle="tooltip" data-title="Download a table containing the germplasm name, match type, selected database match, and the non-selected match suggestions for all entries">
+            <button id="download-all" type="button" class="btn btn-primary btn-block" data-toggle="tooltip" data-title="Download a table containing the search term, match status, database germplasm name, matched database term, matched database term type, and match search routine for all database matches">
               <svg class="bi bi-file-earmark-spreadsheet" width="1em" height="1em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M13 9H3V8h10v1zm0 3H3v-1h10v1z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M5 14V9h1v5H5zm4 0V9h1v5H9z" clip-rule="evenodd"/>
