--- a/static/index.html
+++ b/static/index.html
@@ -373,6 +373,27 @@
       <div id="results-container" class="section-container">
         <br />
 
+        <p><strong>Filter By Match Type:</strong></p>
+        <div class="d-flex flex-row">
+          <div class="p-2 flex-fill">
+            <button type="button" data-match-type="all" class="btn btn-block btn-primary btn-match-filter" disabled>All Matches</button>
+          </div>
+          <div class="p-2 flex-fill">
+            <button type="button" data-match-type="none" class="btn btn-block btn-danger btn-match-filter">None</button>
+          </div>
+          <div class="p-2 flex-fill">
+            <button type="button" data-match-type="exact" class="btn btn-block btn-success btn-match-filter">Exact</button>
+          </div>
+          <div class="p-2 flex-fill">
+            <button type="button" data-match-type="exact_potential" class="btn btn-block btn-success btn-match-filter">Exact &amp; Potential</button>
+          </div>
+          <div class="p-2 flex-fill">
+            <button type="button" data-match-type="potential" class="btn btn-block btn-warning btn-match-filter">Potential</button>
+          </div>
+        </div>
+
+        <br /><br />
+
         <!-- Matches Table -->
         <table id="matches-table" class="table table-striped table-bordered">
           <thead class="thead-light">
@@ -566,6 +587,7 @@
         $("#download-no-matches").click(downloadNoMatches);
         $("#download-all").click(downloadAll);
         $("#matches-return").click(displaySearch);
+        $(".btn-match-filter").click(filterSearch);
         $('#info-alert').on('closed.bs.alert', function () {
           setCookie("info-alert", "dismissed");
         });
