--- a/static/index.html
+++ b/static/index.html
@@ -347,8 +347,8 @@
           <div class="custom-control custom-switch">
             <input id="options-case-sensitive" class="custom-control-input" type="checkbox" checked>
             <label class="custom-control-label" for="options-case-sensitive">
-              Case Sensitive
-              <svg class="bi bi-info-circle-fill search-option-info" width="1em" height="1em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" data-toggle="tooltip" data-title="Perform all of the search routines where matches will need to have the same letter-case in order to match">
+              Case Sensitive (Separate matches that differ in letter-case)
+              <svg class="bi bi-info-circle-fill search-option-info" width="1em" height="1em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" data-toggle="tooltip" data-title="When disabled, matches will be made regardless of letter-case.  When enabled, matches that differ in letter-case will be separated from those that have the same letter-case.">
                 <path fill-rule="evenodd" d="M8 16A8 8 0 108 0a8 8 0 000 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
               </svg>
             </label>
