Add case_sensitive query param for search page

--- a/static/index.html
+++ b/static/index.html
@@ -622,6 +622,7 @@
                         max_edit_distance: q('max_edit_distance')
                       }
                     },
+                    case_sensitive: q('case_sensitive'),
                     terms: q('term', true)
                   }
                 );
