Fix setDatabases callback send the callback to the setCacheInfo function

--- a/static/index.html
+++ b/static/index.html
@@ -415,8 +415,8 @@
       <div id="searching-container" class="section-container text-success">
         <div class="spinner-grow ml-auto" role="status"></div>
         <br /><br />
-        <p><strong><span id="searching-title"></span></strong></p>
-        <p id="searching-status" class="text-secondary"></p>
+        <p><strong><span id="searching-title">Starting Search</span></strong></p>
+        <p id="searching-status" class="text-secondary">Setting up the search parameters...</p>
         <div id="searchng-progress" class="progress">
           <div id="searching-progress-bar" class="progress-bar progress-bar-animated bg-success" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
