Display query params when selecting a database

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,10 @@
             </button>
           </div>
         </div>
-        
+
+
+        <!-- Database Params Warning -->
+        <div id="database-params-warning" class="alert alert-dark" role="alert" style="display: none"></div>
 
 
         <!-- Database Settings -->
