Improve query param description

--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
 
 
         <!-- Database Params Warning -->
-        <div id="database-params-warning" class="alert alert-dark" role="alert" style="display: none"></div>
+        <div id="database-params-warning" class="alert alert-info" role="alert" style="display: none"></div>
 
 
         <!-- Database Settings -->
